--- a/style.css
+++ b/style.css
@@ -4,4 +4,112 @@
     --dark-color: #070917;
     --light-color: #E8F7FB;
     --light-blue-color: #6F7DFB;
+} 
+
+*,
+*::after,
+*::before{
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    font-family: "Poppins", sans-serif;
+}
+
+.wrapper{
+    max-width: 1134px;
+    margin: 0 auto;
+}
+
+/* Buttons */
+
+.btn {
+    padding: 16px 32px;
+    border-radius: 24px;
+    color: #fff;
+    display: inline-block;
+    font-weight: bold;
+    font-size: 18px;
+    text-decoration: none;
+    position: relative;
+}
+
+.btn.dark {
+    background-color: var(--dark-blue-color);
+}
+
+.btn.light {
+    background-color: var(--orange-color);
+}
+
+.btn.enrol-icon::before{
+    content: url(/images/enrol-icon.svg);
+    position: absolute;
+    top: 50%;
+    left: 32px;
+    transform: translateY(-50%);
+}
+
+.btn.enrol-icon{
+    padding-left: 60px;
+}
+
+
+
+/* Header Section Start */
+header{
+    background: linear-gradient(180deg, #6F7DFB, #26308C 100%);
+    height: 100vh;
+    width: 100%;
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    width: 1134px;
+    top: 36px;
+    z-index: 100;
+}
+
+nav .logo{
+    font-family: "Raleway", sans-serif;
+    color: #fff;
+    font-size: 40px;
+    font-weight: 900;
+}
+
+nav ul{
+    display: flex;
+    align-items: center;
+    gap: 60px;
+    list-style: none;
+    margin: 0;
+}
+
+nav ul a{
+    text-decoration: none;
+    font-family: "Poppins", sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+    color: #fff;
+}
+
+/* header Section Ends */
+
+/* Hero Section */
+.hero-section {
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/* Achievment-cards */
+
+.achievment-cards {
+    display: none;
 }
