--- a/style.css
+++ b/style.css
@@ -203,3 +203,21 @@ nav ul a{
     align-items: center;
     gap: 12px;
 }
+
+/* Testimonials Section */
+section{
+    margin-top: 100px;
+}
+
+h2{
+    font-family: "Raleway", sans-serif;
+    font-weight: 900;
+    font-size: 60px;
+    line-height: 120%;
+    margin: 0;
+    color: var(--dark-blue-color);
+}
+
+h2.light{
+    color: #fff;
+}
